# DCO1020---Mobile-Communications

./: README.md  index.html
assignment1/code/: .gitignore  README.md  prx.mat  pyproject.toml  real_world_prox.mat
assignment1/code/assignment1/: stats.py  trial_1.py  trial_2.py
assignment1/report/: IEEEtran.cls  gppcom_books.bib  gppcom_papers.bib  main.tex  some_books.bib  trabalho_gppcom.aux  trabalho_gppcom.bbl  trabalho_gppcom.blg  trabalho_gppcom.synctex  trabalho_gppcom.tcp  trabalho_gppcom.tex  trabalho_gppcom.tps
assignment1/report/images/: trial1_estimated.eps  trial1_pathloss.eps  trial1_real_world_prx_estimated.eps  trial1_real_world_prx_pathloss.eps  trial1_shadowing.eps
assignment1/report_1/: some_books.bib  some_papers.bib
assignment1/report_1/code/: example.py  pathloss.py
assignment1/report_1/images/: trial1_original.eps  trial1_real_world_prx_pathloss_shadowing.eps
assignment1/report_2/: main.tex  some_books.bib  some_urls.bib
assignment1/report_2/images/: gans_060kmh.eps  gans_120kmh.eps  gans_3kmh.eps
assignment2/: README.txt
assignment2/code/: index.html
assignment2/report/: DCO1020.tex  bib.bib  main.tex  sbrt2017port.cls  some_papers.bib  some_urls.bib
