[tool.poetry]
name = "assignment1"
version = "0.1.0"
description = ""
authors = ["Vinícius Dantas <viniciusdantas@bct.ect.ufrn.br>"]

[tool.poetry.dependencies]
python = "^3.6"
scipy = "^1.2"
matplotlib = "^3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
